First commited as before_62449_rev1