@@ -181,7 +181,7 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 	 */
 	@Override
 	protected Object doGetValue() {
-		return Integer.valueOf(selection);
+		return new Integer(selection);
 	}
 
 	@Override
@@ -258,7 +258,8 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 			// Only format if the 'index' is valid
 			if (items.length > 0 && selection >= 0 && selection < items.length) {
 				// try to insert the current value into the error message.
-				setErrorMessage(MessageFormat.format(getErrorMessage(), items[selection]));
+				setErrorMessage(MessageFormat.format(getErrorMessage(),
+						new Object[] { items[selection] }));
 			} else {
 				// Since we don't have a valid index, assume we're using an
 				// 'edit'
